# multimedia-coder

./: CMakeLists.txt  README.md  run.bat
results/: analyze_results.py  baboon_ascii.codestream  lena_ascii.codestream  quadrado_ascii.codestream
src/: arithmetic_coder.cpp  arithmetic_coder.hpp  bit_io.cpp  bit_io.hpp  constants.hpp  main.cpp  utils.cpp  utils.hpp
